<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shipping Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="packageLength">Length of Package</string>
    <string name="packageWidth">Width of Package</string>
    <string name="packageHeight">Height of Package</string>
    <string name="weightLBL">Weight of the package</string>
    <string name="ouncesLBL">(in ounces)</string>
    <string name="inchesLBL">(in inches)</string>
    <string name="baseLBL">Base Cost:</string>
    <string name="addCostLBL">Added Cost:</string>
    <string name="totalLBL">Total Shipping Cost:</string>
    <string name="zeroDec">$0.00</string>
    <string name="zero">0</string>
    <string name="radioStandard">Standard</string>
    <string name="radioPriority">Priority</string>
    <string name="radioExpress">Express</string>
    <string name="shippingOption">Shipping Option</string>

</resources>
