<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/shippingbck"
    tools:context=".MyActivity">

    <!-- WEIGHT INPUT SECTION -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/weightLBL"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

    <!-- WEIGHT INPUT EDIT TEXT FIELD RECEIVES FOCUS -->
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/zero"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="25sp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText1"
        android:layout_centerHorizontal="true"
        android:text="@string/ouncesLBL" />


    <!-- LENGTH INPUT SECTION -->
    <TextView
        android:id="@+id/lengthView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/packageLength" />

    <!-- LENGTH INPUT EDIT TEXT FIELD RECEIVES FOCUS -->
    <EditText
        android:id="@+id/editLengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lengthView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/zero"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="25sp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/inLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLengthText"
        android:layout_centerHorizontal="true"
        android:text="@string/inchesLBL" />

    <!-- WIDTH INPUT SECTION -->
    <TextView
        android:id="@+id/widthView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inLabel1"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/packageWidth" />

    <!-- WIDTH INPUT EDIT TEXT FIELD RECEIVES FOCUS -->
    <EditText
        android:id="@+id/editWidthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widthView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/zero"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="25sp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/inLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editWidthText"
        android:layout_centerHorizontal="true"
        android:text="@string/inchesLBL" />

    <!-- HEIGHT INPUT SECTION -->
    <TextView
        android:id="@+id/heightView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inLabel2"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/packageHeight" />

    <!-- HEIGHT INPUT EDIT TEXT FIELD RECEIVES FOCUS -->
    <EditText
        android:id="@+id/editHeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heightView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/zero"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="25sp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/inLabel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editHeightText"
        android:layout_centerHorizontal="true"
        android:text="@string/inchesLBL" />

    <!-- TEXTVIEWS FOR BASE COST LABEL AND COMPUTATION  -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignStart="@+id/textView1"
        android:text="@string/baseLBL"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView1"
        android:layout_alignBaseline="@id/textView3"
        android:paddingRight="@dimen/output_margin_buffer"
        android:text="@string/zeroDec" />

    <!-- TEXTVIEWS FOR ADDED COST LABEL AND COMPUTATION  -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_alignStart="@+id/textView1"
        android:text="@string/addCostLBL"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView5"
        android:layout_alignBottom="@id/textView5"
        android:layout_alignEnd="@+id/textView1"
        android:paddingRight="@dimen/output_margin_buffer"
        android:text="@string/zeroDec" />


    <!-- TEXTVIEWS FOR THE TOTAL COST LABEL AND COMPUTATION  -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView1"
        android:layout_marginBottom="21dp"
        android:text="@string/totalLBL" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView7"
        android:layout_alignBottom="@id/textView7"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/output_margin_buffer"
        android:text="@string/zeroDec" />

    <RadioGroup
        android:id="@+id/shippingOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="104dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/shippingStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/radioStandard" />

        <RadioButton
            android:id="@+id/shippingPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioPriority" />

        <RadioButton
            android:id="@+id/shippingExpress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioExpress" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:text="@string/shippingOption" />

</RelativeLayout>
